--- a/index.html
+++ b/index.html
@@ -1111,7 +1111,7 @@
 
   <section id="languages" data-aos="fade-up">
     <h2><i class="fa-solid fa-language"></i> Languages</h2>
-    <div class="illustration"><img src="images/Collaboration-bro.svg" alt="Languages"></div>
+    <div class="illustration"><img src="Timeline-bro.svg" alt="Languages"></div>
     <ul>
       <li>Arabic: Native</li>
       <li>English: Advanced</li>
@@ -1767,3 +1767,4 @@
   </script>
 </body>
 </html>
+
