--- a/index.html
+++ b/index.html
@@ -1063,7 +1063,7 @@
   <!-- NEW: Interactive Timeline Section -->
   <section id="timeline" data-aos="fade-up">
     <h2><i class="fa-solid fa-timeline"></i> Professional Timeline</h2>
-    <div class="illustration"><img src="images/Project timeline-bro.svg" alt="Timeline"></div>
+    <div class="illustration"><img src="Timeline-bro.svg" alt="Timeline"></div>
     
     <div class="timeline">
       <div class="timeline-item">
@@ -1767,4 +1767,5 @@
   </script>
 </body>
 </html>
+
 
