--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     "@context": "https://schema.org",
     "@type": "Person",
     "name": "Bouziani Imane",
-    "jobTitle": "AI Engineer & Computer Scientist",
+    "jobTitle": "",
     "email": "bouzianiimane1@gmail.com",
     "telephone": "+213-664-64-77-79",
     "address": {
@@ -1976,6 +1976,7 @@ body.dark-mode .theme-btn {
 </script>
 </body>
 </html>
+
 
 
 
