--- a/index.html
+++ b/index.html
@@ -1288,7 +1288,7 @@ body.dark-mode .theme-btn {
 
   <section id="languages" data-aos="fade-up">
     <h2><i class="fa-solid fa-language"></i> Languages</h2>
-    <div class="illustration"><img src="Timeline-bro.svg" alt="Languages"></div>
+    <div class="illustration"><img src="images/Collaboration-bro.svg" alt="Languages"></div>
     <ul>
       <li>Arabic: Native</li>
       <li>English: Advanced</li>
@@ -1976,6 +1976,7 @@ body.dark-mode .theme-btn {
 </script>
 </body>
 </html>
+
 
 
 
