--- a/index.html
+++ b/index.html
@@ -2036,7 +2036,7 @@ function updateThemeColors(theme, isDarkMode) {
   document.querySelector('header').style.background = 
     `linear-gradient(270deg, ${colors.header1}, ${colors.header2}, ${colors.header1})`;
   
-  // Update header text gradient (This is the new line for your name)
+  // Update "Bouziani Imane" text gradient
   document.querySelector('header h1').style.background = 
     `linear-gradient(90deg, ${colors.primary}, ${colors.secondary}, ${colors.primary})`;
   
@@ -2121,6 +2121,7 @@ function updateThemeColors(theme, isDarkMode) {
 </script>
 </body>
 </html>
+
 
 
 
