--- a/index.html
+++ b/index.html
@@ -74,14 +74,15 @@
       100% {background-position: 0% 50%;}
     }
     
-    header h1 {
-      font-size: 2.5em; 
-      margin: 0;
-      background: linear-gradient(90deg, #fbc2eb, #a6c1ee, #fbc2eb);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      animation: gradientText 5s infinite alternate;
-    }
+  header h1 {
+  font-size: 2.5em; 
+  margin: 0;
+  background: linear-gradient(90deg, #8a2be2, #4169e1, #8a2be2); /* Darker, more visible colors */
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: gradientText 5s infinite alternate;
+  text-shadow: 0 0 10px rgba(138, 43, 226, 0.3); /* Adds subtle glow for better visibility */
+}
     
     @keyframes gradientText {
       0% { background-position: 0%; }
@@ -2271,3 +2272,4 @@ function updateThemeColors(theme, isDarkMode) {
 </script>
 </body>
 </html>
+
