--- a/index.html
+++ b/index.html
@@ -74,14 +74,39 @@
       100% {background-position: 0% 50%;}
     }
     
-  header h1 {
-  font-size: 2.5em; 
+ header h1 {
+  font-size: 2.8em; 
   margin: 0;
-  background: linear-gradient(90deg, #8a2be2, #4169e1, #8a2be2); /* Darker, more visible colors */
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  animation: gradientText 5s infinite alternate;
-  text-shadow: 0 0 10px rgba(138, 43, 226, 0.3); /* Adds subtle glow for better visibility */
+  color: #ffffff;
+  text-shadow: 
+    0 0 10px #a6c1ee,
+    0 0 20px #a6c1ee, 
+    0 0 30px #fbc2eb,
+    0 0 40px #fbc2eb,
+    0 0 70px #ff00ff,
+    0 0 80px #ff00ff;
+  animation: neonPulse 2s ease-in-out infinite alternate;
+  font-weight: 700;
+  letter-spacing: 2px;
+}
+
+@keyframes neonPulse {
+  from {
+    text-shadow: 
+      0 0 10px #a6c1ee,
+      0 0 20px #a6c1ee, 
+      0 0 30px #fbc2eb,
+      0 0 40px #fbc2eb;
+  }
+  to {
+    text-shadow: 
+      0 0 15px #a6c1ee,
+      0 0 25px #a6c1ee, 
+      0 0 35px #fbc2eb,
+      0 0 45px #fbc2eb,
+      0 0 80px #ff00ff,
+      0 0 90px #ff00ff;
+  }
 }
     
     @keyframes gradientText {
@@ -2272,4 +2297,5 @@ function updateThemeColors(theme, isDarkMode) {
 </script>
 </body>
 </html>
+
 
