--- a/index.html
+++ b/index.html
@@ -77,10 +77,9 @@
 header h1 {
   font-size: 2.8em; 
   margin: 0;
-  background: linear-gradient(90deg, #ffffff, #f0f8ff, #ffffff); /* White to light blue-white */
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
+  color: #ffffff;
+  text-shadow: 1px 1px 6px rgba(0, 0, 0, 0.5),
+               0px 0px 12px rgba(0, 0, 0, 0.3);
   font-weight: 700;
   letter-spacing: 1px;
 }
@@ -2275,6 +2274,7 @@ function updateThemeColors(theme, isDarkMode) {
 </script>
 </body>
 </html>
+
 
 
 
