--- a/index.html
+++ b/index.html
@@ -77,11 +77,32 @@
 header h1 {
   font-size: 2.8em; 
   margin: 0;
-  color: #ffffff;
-  text-shadow: 1px 1px 6px rgba(0, 0, 0, 0.5),
-               0px 0px 12px rgba(0, 0, 0, 0.3);
+  color: #ffffff; /* Always white text */
+  text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.4), 
+               0px 0px 15px rgba(0, 0, 0, 0.2);
   font-weight: 700;
   letter-spacing: 1px;
+}
+
+/* Theme-specific shadow adjustments */
+.theme-lavender header h1 {
+  text-shadow: 2px 2px 8px rgba(106, 90, 205, 0.3),
+               0px 0px 15px rgba(138, 43, 226, 0.2);
+}
+
+.theme-mint header h1 {
+  text-shadow: 2px 2px 8px rgba(76, 175, 80, 0.3),
+               0px 0px 15px rgba(46, 125, 50, 0.2);
+}
+
+.theme-peach header h1 {
+  text-shadow: 2px 2px 8px rgba(255, 152, 0, 0.3),
+               0px 0px 15px rgba(255, 87, 34, 0.2);
+}
+
+.theme-sky header h1 {
+  text-shadow: 2px 2px 8px rgba(33, 150, 243, 0.3),
+               0px 0px 15px rgba(3, 169, 244, 0.2);
 }
 
 
@@ -2274,6 +2295,7 @@ function updateThemeColors(theme, isDarkMode) {
 </script>
 </body>
 </html>
+
 
 
 
